--- a/index.html
+++ b/index.html
@@ -2,6 +2,10 @@
 <html lang="en-US">
 <head>
   <title>Calculator</title>
+  <link href="css/bootstrap.css" rel="stylesheet" type="text/css">
+  <link href="css/styles.css" rel="stylesheet" type="text/css">
+  <script src="js/jquery-3.6.0.js"></script>
+  <script src="js/scripts.js"></script>
 </head>
 <body>
   <h1>Calculator</h1>
