--- a/calculator.html
+++ b/calculator.html
@@ -10,43 +10,70 @@
 <body>
   <div class="container">
     <h1>Calculator</h1>
-    <form id="calculator">
-      <div class="form-group">
-        <label for="input1">1st number:</label>
-        <input id="input1" class="form-control" type="text">
-      </div>
-      <div class="form-group">
-        <label for="input2">2nd number:</label>
-        <input id="input2" class="form-control" type="text">
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="add" checked>
-          add
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="subtract">
-          subtract
-        </label>
-      </div>
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="multiply">
-          multiply
-        </label>
-      </div>        
-      <div class="radio">
-        <label>
-          <input type="radio" name="operator" value="divide">
-          divide
-        </label>
-      </div>        
-      <button type="submit" class="btn">Go!</button>
-    </form>
-    <div id="output">
 
+    <form id="calculator">
+      <div class="row">
+
+        <div class="col">
+          <div class="form-group">
+            <label for="input1">1st number:</label>
+            <input id="input1" class="form-control" type="text">
+          </div>
+        </div>
+
+        <div class="col">
+          <div class="form-group">
+            <label for="input2">2nd number:</label>
+            <input id="input2" class="form-control" type="text">
+          </div>
+        </div>
+
+        <div class="col d-flex align-items-end">
+          <button type="submit" class="btn btn-success">Go!</button>
+        </div>
+
+      </div>
+
+      <div class="row">
+        <div class="col d-flex justify-content-center">
+          <div class="form-check form-check-inline">
+            <label>
+              <input type="radio" name="operator" value="add" checked>
+              add
+            </label>
+          </div>
+  
+          <div class="form-check form-check-inline">
+            <label>
+              <input type="radio" name="operator" value="subtract">
+              subtract
+            </label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <label>
+              <input type="radio" name="operator" value="multiply">
+              multiply
+            </label>
+          </div>
+
+          <div class="form-check form-check-inline">
+            <label>
+              <input type="radio" name="operator" value="divide">
+              divide
+            </label>
+          </div>
+        </div>
+      </div>
+    </form>
+
+    <div class="card">
+      <div class="card-body bg-info">
+        <h4>
+          Result:
+          <span id="output"></span>
+        </h4>
+      </div>
     </div>
   </div>
 </body>
